--- a/css/frame.css
+++ b/css/frame.css
@@ -89,9 +89,10 @@ hr {
 }
 
 .menu {
+  /* LARGEUR MENU */
   position: relative;
   margin: 0 auto;
-  max-width: 1100px;
+  max-width: 1250px; 
 }
 
 .menu .menu-table {
